--- a/about.Rmd
+++ b/about.Rmd
@@ -10,9 +10,4 @@ Aspired to employ statistical models and data insights to create a more sustaina
 <br/>
 
 #### Resume:
-
-<object data="resume.pdf" type="application/pdf" width="700px" height="700px">
-    <embed src="resume.pdf">
-        <p>This browser does not support PDFs. Please download the PDF to view it: <a href="resume.pdf">Download PDF</a>.</p>
-    </embed>
-</object>
+![](resume.jpg)
